# ddnet-change-color

./: .justfile  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Info.plist.template  README.md  TODO.md  build.py  build_script.py  ddnet-change-color.desktop  ddnet-change-color.spec  generate_icons.py  pyproject.toml  version_info.txt
.github/workflows/: ci.yml  release.yml
assets/macos/: icon.icns
build_system/: __init__.py  builder.py  config.py  utils.py
src/ddnet_change_color/: __init__.py  __main__.py  config.py  constant.py  log.py  widget.py
src/ddnet_change_color/dialogs/: settings_dialog.py
src/ddnet_change_color/models/: color_store.py
src/ddnet_change_color/ui/: main_window.py
src/ddnet_change_color/widgets/: color_item.py  color_list.py
tests/: conftest.py  test_main.py
tests/test_dialogs/: test_settings_dialog.py
tests/test_models/: test_color_store.py
tests/test_ui/: test_main_window.py
tests/test_utils/: test_constants.py
