[project]
name = "ddnet-change-color"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CAESIUS-TIM", email = "60285058+CAESIUS-TIM@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pyqt6>=6.11.0",
    "pyside6>=6.11.0",
]

[project.scripts]
ddnet-change-color = "ddnet_change_color:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-qt>=4.5.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.15.10",
]

build = [
    "pyinstaller>=6.0.0",
    "pillow>=10.0.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
]
ignore = []
per-file-ignores = { "__init__.py" = ["F401"] }  # allow unused imports in __init__.py

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["**/__pycache__", "**/.pytest_cache", "**/.venv"]

[tool.coverage.run]
source = ["src/ddnet_change_color"]
omit = ["*/__pycache__/*", "*.pyc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --disable-warnings"
timeout = 30
timeout_method = "thread"
xfail_strict = true
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.pytest.ini_options.qt_log_ignore]
function = [
    "qt.pyside6",
    "qt.qpa.*",
]
level = "WARNING"
